--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "node-cron": "^3.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
